gccida/g0/update_life_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1093:41: error: must use 'enum' tag to refer to type 'update_life_extent'
void  update_life_info( sbitmap blocks, update_life_extent extent, int prop_flags) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1111:20: error: expected identifier or '('
unsigned __int64 *(short *)0x_1; // [rsp+80h] [rbp-50h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1111:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1111:19: note: to match this '('
unsigned __int64 *(short *)0x_1; // [rsp+80h] [rbp-50h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1112:16: error: expected identifier or '('
unsigned int *(short *)0xnum__1; // [rsp+88h] [rbp-48h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1112:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1112:15: note: to match this '('
unsigned int *(short *)0xnum__1; // [rsp+88h] [rbp-48h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1115:20: error: expected identifier or '('
unsigned __int64 *(short *)0x_0; // [rsp+98h] [rbp-38h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1115:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1115:19: note: to match this '('
unsigned __int64 *(short *)0x_0; // [rsp+98h] [rbp-38h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1116:16: error: expected identifier or '('
unsigned int *(short *)0xnum__0; // [rsp+A0h] [rbp-30h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1116:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1116:15: note: to match this '('
unsigned int *(short *)0xnum__0; // [rsp+A0h] [rbp-30h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1119:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+B0h] [rbp-20h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1119:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1119:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+B0h] [rbp-20h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1121:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+C0h] [rbp-10h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1121:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1121:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+C0h] [rbp-10h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1130:6: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
v3 = TV_LIFE_0; 
     ^~~~~~~~~
     TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1132:6: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
v3 = TV_LIFE_UPDATE_0; 
     ^~~~~~~~~~~~~~~~
     TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1166:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1167:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ < size_ ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1169:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/flow.c:1169:32: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_[*(short *)0xnum_]; 
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/update_life_info/src/obj/flow.o] Error 1
